Add dev-container and pipeline

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Import highlights from your Kobo device",
 	"main": "src/main.js",
 	"scripts": {
+		"lint": "eslint . --ext .ts",
 		"dev": "watchexec -r -e ts -- node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
