--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,11 @@
 name: CI
 
+on:
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
+
 jobs:
     lint-and-test:
         runs-on: ubuntu-latest
