--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,19 +1,27 @@
 name: CI
 
 on:
-    push:
-        branches: [master]
-    pull_request:
-        branches: [master]
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
-    lint-and-test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
+  lint-and-test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
 
-            - name: Install modules
-              run: npm install
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+          node-version: "16.x"
 
-            - name: Lint
-              run: npm run lint
+    - name: Install modules
+      run: npm install
+
+    - name: Lint
+      run: npm run lint
+
+    - name: Build
+      run: npm run build
