--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "obsidian-kobo-highlights-importer-plugin",
 	"name": "Kobo Highlights Importer",
-	"version": "1.2.0-beta.1",
+	"version": "1.2.0",
 	"minAppVersion": "0.15.9",
 	"description": "Import highlights from your Kobo device",
 	"author": "Kevin Hellemun",
