feat: inlude notes in the export
Closes #6

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-kobo-highlights-importer-plugin",
-	"version": "1.2.0",
+	"version": "1.3.0-beta.1",
 	"description": "Import highlights from your Kobo device",
 	"main": "src/main.js",
 	"scripts": {
