--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
 		"typescript": "4.8.3"
 	},
 	"dependencies": {
-		"@popperjs/core": "^2.11.6",
-		"@types/better-sqlite3": "^7.6.0",
-		"esbuild-plugin-wat": "^0.2.7",
-		"moment": "^2.29.4",
-		"sanitize-filename-ts": "^1.0.2",
-		"sql.js": "^1.8.0"
+		"@popperjs/core": "2.11.6",
+		"@types/better-sqlite3": "7.6.0",
+		"esbuild-plugin-wat": "0.2.7",
+		"moment": "2.29.4",
+		"sanitize-filename-ts": "1.0.2",
+		"sql.js": "1.8.0"
 	}
 }
