--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,27 +1,26 @@
 name: CI
-
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
-
 jobs:
+  conform:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Conform Action
+        uses: siderolabs/conform@v0.1.0-alpha.27
   lint-and-test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
           node-version: "18.x"
-
-    - name: Install modules
-      run: npm install
-
-    - name: Lint
-      run: npm run lint
-
-    - name: Build
-      run: npm run build
+      - name: Install modules
+        run: npm install
+      - name: Lint
+        run: npm run lint
+      - name: Build
+        run: npm run build
