--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,15 +6,15 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": true,
-      "prerelease": false
+      "prerelease": false,
+      "extra-files": [
+        {
+          "type": "json",
+          "path": "manifest.json",
+          "jsonpath": "$.version"
+        }
+      ]
     }
   },
-  "extra-files": [
-    {
-      "type": "json",
-      "path": "manifest.json",
-      "jsonpath": "$.version"
-    }
-  ],
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
