--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,7 +3,7 @@ name: Build plugin
 on:
   release:
     types:
-      - "unpublished" 
+      - "published" 
 
 env:
   PLUGIN_NAME: kobo-highlights-import
@@ -58,7 +58,3 @@ jobs:
           asset_path: ./manifest.json
           asset_name: manifest.json
           asset_content_type: application/json
-      - uses: eregon/publish-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
