--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "watchexec -r -e ts -- node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"test": "mocha",
+		"test": "node --max-old-space-size=4096 ./node_modules/mocha/bin/_mocha",
 		"coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test"
 	},
 	"keywords": [],
