--- a/.drone.yml
+++ b/.drone.yml
@@ -541,7 +541,7 @@
                "path": "/drone/src/node_modules"
             }
          ],
-         "mem_limit": "4096M",
+         "mem_limit": "2000000000",
       },
       {
          "commands": [
