--- a/.drone.yml
+++ b/.drone.yml
@@ -467,96 +467,10 @@
    "steps": [
       {
          "commands": [
-            "echo \"$CONFIG\" > /root/.aws/credentials"
+            "earthly --secret VAULT_TOKEN --ci +test-all"
          ],
-         "environment": {
-            "CONFIG": {
-               "from_secret": "aws"
-            }
-         },
-         "image": "debian:11@sha256:7a89d1fd045f797f2f34dd778bdf19335587357c3603859f2048f4c0285b06a8",
-         "name": "set aws credentials",
-         "volumes": [
-            {
-               "name": "aws-config",
-               "path": "/root/.aws"
-            }
-         ]
-      },
-      {
-         "commands": [
-            "aws --endpoint-url http://100.82.97.39:9000 s3 cp s3://repo-obsidian-kobo-highlights-import/KoboReader.sqlite /drone/src/KoboReader.sqlite"
-         ],
-         "image": "docker.io/amazon/aws-cli:2.13.15@sha256:ac2c7d3827a8fef1024357ada9c6ccd8d0ce098a85cffd6803a52bb8cb4842ed",
-         "name": "copy kobo database",
-         "volumes": [
-            {
-               "name": "aws-config",
-               "path": "/root/.aws"
-            }
-         ]
-      },
-      {
-         "commands": [
-            "npm install"
-         ],
-         "image": "node:20",
-         "name": "install",
-         "volumes": [
-            {
-               "name": "node_modules",
-               "path": "/drone/src/node_modules"
-            }
-         ]
-      },
-      {
-         "commands": [
-            "npm run lint"
-         ],
-         "depends_on": [
-            "install"
-         ],
-         "image": "node:20",
-         "name": "lint",
-         "volumes": [
-            {
-               "name": "node_modules",
-               "path": "/drone/src/node_modules"
-            }
-         ]
-      },
-      {
-         "commands": [
-            "npm run test"
-         ],
-         "depends_on": [
-            "install",
-            "copy kobo database"
-         ],
-         "image": "node:20",
-         "name": "test",
-         "volumes": [
-            {
-               "name": "node_modules",
-               "path": "/drone/src/node_modules"
-            }
-         ]
-      },
-      {
-         "commands": [
-            "npm run build"
-         ],
-         "depends_on": [
-            "install"
-         ],
-         "image": "node:20",
-         "name": "build",
-         "volumes": [
-            {
-               "name": "node_modules",
-               "path": "/drone/src/node_modules"
-            }
-         ]
+         "image": "earthly/earthly:v0.7.22",
+         "name": "test all"
       }
    ],
    "trigger": {
@@ -566,18 +480,7 @@
       ]
    },
    "type": "docker",
-   "volumes": [
-      {
-         "host": {
-            "path": "/tmp/node_modules/kobo"
-         },
-         "name": "node_modules"
-      },
-      {
-         "name": "aws-config",
-         "temp": { }
-      }
-   ]
+   "volumes": [ ]
 }
 ---
 {
@@ -653,6 +556,6 @@
 }
 ---
 kind: signature
-hmac: 5a5a2892990d43ba5d860e4377445d666e9c23a6c5d2343fbc0dba9f7d1190bf
+hmac: 3c4c98f62b5e669d0bae3cb37f905f7f70c99488439899b69d32b484c5c604ff
 
 ...
