--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,7 @@
       "release-type": "node",
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
-      "draft": false,
+      "draft": true,
       "prerelease": false,
       "extra-files": [
         {
