--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   conform:
     runs-on: ubuntu-latest
+    if: "!startsWith(github.head_ref, 'renovate/')"
     steps:
       - uses: actions/checkout@v4
         with:
