ci: add code formatting workflow for PRs
Introduce a GitHub Actions workflow to run formatters and linters
on YAML, JS, TS, JSON, and Markdown files for pull requests. Includes
yamllint, prettier, markdownlint, and actionlint jobs.

Change-Id: 051cc09c3df49089c04d81b411cea67c
Change-Id-Short: zuynnzqnwmkv

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,11 +18,11 @@ jobs:
         run: |
           npm install
           npm run build
-          mkdir ${{ env.PLUGIN_NAME }}
-          cp main.js manifest.json ${{ env.PLUGIN_NAME }}
-          zip -r ${{ env.PLUGIN_NAME }}.zip ${{ env.PLUGIN_NAME }}
+          mkdir "${{ env.PLUGIN_NAME }}"
+          cp main.js manifest.json "${{ env.PLUGIN_NAME }}"
+          zip -r "${{ env.PLUGIN_NAME }}.zip" "${{ env.PLUGIN_NAME }}"
           ls
-          echo "::set-output name=tag_name::$(git tag --sort version:refname | tail -n 1)"
+          echo "tag_name=$(git tag --sort version:refname | tail -n 1)" >> "$GITHUB_OUTPUT"
       - name: Upload zip file
         id: upload-zip
         uses: sekwah41/upload-release-assets@v1.1.0
