chore: run formtatters on all files
Change-Id: 2b3902c78904e4a01ac91cef536a2253
Change-Id-Short: xowqzxnsrqzv

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,4 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"github>OGKevin/renovate-config",
-		":automergePatch"
-	]
+	"extends": ["github>OGKevin/renovate-config", ":automergePatch"]
 }
