--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,8 +1,6 @@
 {
-    "extension": [
-        "ts"
-    ],
-    "spec": "src/**/*.test.ts",
-    "require": "ts-node/register",
-    "timeout": "10000"
+	"extension": ["ts"],
+	"spec": "src/**/*.test.ts",
+	"require": "ts-node/register",
+	"timeout": "10000"
 }
