--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"@types/node": "22.18.6",
 		"@types/sql.js": "1.4.9",
 		"@types/uuid": "^11.0.0",
-		"@typescript-eslint/eslint-plugin": "8.30.1",
-		"@typescript-eslint/parser": "8.30.1",
+		"@typescript-eslint/eslint-plugin": "^8.31.0",
+		"@typescript-eslint/parser": "^8.31.0",
 		"builtin-modules": "5.0.0",
 		"chai": "6.0.1",
 		"esbuild": "0.25.10",
