build: migrate to ESM by updating package and tsconfig
Switched project to ECMAScript modules by adding `"type": "module"` to
package.json and setting "module" to "ESNext" in tsconfig.json. This
enables native ESM support and modern module resolution.

This should also resolve the failing tests.

Change-Id: f30ee004abc8fc37f3b3568334a8469f
Change-Id-Short: kwzllzzvponr

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "obsidian-kobo-highlights-importer-plugin",
 	"version": "4.1.0",
+	"type": "module",
 	"description": "Import highlights from your Kobo device",
 	"main": "src/main.js",
 	"scripts": {
