--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strict": true,
-		"lib": ["DOM", "ES5", "ES6", "ES7"]
+		"lib": ["DOM", "ES5", "ES6", "ES7", "ES2022"]
 	},
 	"include": ["**/*.ts"],
 	"exclude": ["node_modules/*", "**/*.test.ts"]
